Fixed Event Card Alignment

--- a/index.css
+++ b/index.css
@@ -202,9 +202,9 @@ html{
 }
 
 .rows{
+    margin: 10px;
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
 }
 
 .events .link{
@@ -220,7 +220,6 @@ html{
     flex-direction: column;
     width: 690px;
     height: 100%;
-    margin: 10px;
 }
 
 .dark-card {
